# engineer-memory

./: .env.example  .gitignore  Makefile  README.md  compose.dev.yaml  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_multi_tenant_foundation.py  0002_github_integration.py  0003_github_sync_tables.py  0004_parsed_changes.py  0005_ai_analysis.py  0006_ai_advisor.py  0007_pgvector_embeddings.py  7a8000098f09_add_engineeringdigest_model.py  ef352da23553_add_releasenote_model.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  analyzer.py  digest_generator.py  embedder.py  release_generator.py
backend/app/api/: deps.py  health.py
backend/app/core/: config.py  db.py  security.py
backend/app/github/: __init__.py  schemas.py  security.py
backend/app/models/: __init__.py  ai_advisor.py  ai_analysis.py  base.py  commit.py  engineering_digest.py  github_installation.py  github_repository.py  membership.py  organization.py  parsed_change.py  pull_request.py  pull_request_file.py  raw_event.py  release_note.py  reviewer.py  user.py
backend/app/parser/: __init__.py  diff_parser.py
backend/app/repositories/: __init__.py  base.py  github_installation.py  github_sync.py  membership.py  organization.py  raw_event.py  user.py
backend/app/services/: __init__.py  assistant.py  (+4 more)
backend/engineering_memory_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/keys/: engineering-memory.2026-07-17.private-key.pem
backend/tests/: test_parser.py
(+43 files in other folders)
