[build-system]
requires = ["setuptools>=75.6"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-memory-api"
version = "0.1.0"
description = "API and worker foundation for Engineering Memory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "celery[redis]>=5.4,<6.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "openai>=1.50,<2.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "bcrypt==4.0.1",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.7,<3.0",
  "pgvector>=0.3,<1.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.32,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.8,<1.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses Depends() in function signature defaults — this is by design.
"app/api/**/*.py" = ["B008"]
# Generic[T] syntax is more readable and compatible than PEP 695 type params.
"app/repositories/base.py" = ["UP046"]
